--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,29 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-primary: #0b3c5d;
+  --color-white: #ffffff;
+  --color-secondary-hover: #d94f4c;
+  --color-secondary: #F25F5C;
+  --color-black: #333333;
+  --color-success: #28a745;
+  --color-warning: #ffc107;
+  --color-page: #f0f0f0;
+  --color-foreground: var(--foreground);
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+:root {
+  --background: var(--color-page);
+  --foreground: #171717;
 }
 
 body {
-  background: var(--background);
+  background: var(--color-page-bg);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
