--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,12 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.scroll-bar-small {
+  scrollbar-width: none;
+  scrollbar-color: var(--color-page) var(--color-page);
+}
+
+.scroll-bar-small::-webkit-scrollbar {
+  width: 8px;
+}
