feat: login form and functionality

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-warning: #ffc107;
   --color-page: #f0f0f0;
   --color-foreground: var(--foreground);
+  --color-background: #F9FAFB;
 }
 
 @theme inline {
